--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
     </script>
     <style type="text/css" media="screen">
         body { background: black;}
+        #cr-stage { margin: auto; }
     </style>
 </head>
 <body>
