--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,5 @@ block content
     script(src="/javascripts/game.js")
     script(type='text/javascript').
       window.addEventListener('load', Game.start)
-    style(type="text/css", media="screen")
-      body { background: black;}
-      #cr-stage { margin: auto; }
+    style(type="text/css", media="screen").
+      #cr-stage
