--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,14 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src="/javascripts/crafty.js")
+    script(src="/javascripts/tweener.js")
+    script(src="/javascripts/scenes.js")
+    script(src="/javascripts/components.js")
+    script(src="/javascripts/game.js")
+    script(type='text/javascript').
+      window.addEventListener('load', Game.start)
+    style(type="text/css", media="screen").
+      #cr-stage
   body
     block content
